# Схема базы данных app
# Сгенерировано 2025-08-17 02:08:51
# Команда: mysql_to_dbdiagram 

Table authors {
  id           bigint            [pk, increment, not null]
  first_name   varchar(100)      
  middle_name  varchar(100)      
  last_name    varchar(100)      
  birth_year   int               
  death_year   int               
  biography    text              
  created_at   datetime          [not null]
  updated_at   datetime          [not null]
  deleted_at   datetime          
}

Table fragments {
  id              bigint                                       [pk, increment, not null]
  poem_id         bigint                                       [not null]
  owner_id        bigint                                       [not null]
  label           varchar(255)                                 
  structure_info  varchar(255)                                 
  sort_order      int                                          [not null]
  grade_level     enum('primary','middle','secondary')         [not null]
  status          enum('draft','published','unpublished')      [not null]
  created_at      datetime                                     [not null]
  updated_at      datetime                                     [not null]
  deleted_at      datetime                                     
}

Table lines {
  id           bigint            [pk, increment, not null]
  fragment_id  bigint            [not null]
  line_number  int               [not null]
  text         varchar(255)      [not null]
  end_line     boolean           [not null]
  created_at   datetime          [not null]
  updated_at   datetime          [not null]
  deleted_at   datetime          
}

Table poem_authors {
  poem_id    bigint      [pk, not null]
  author_id  bigint      [pk, not null]
}

Table poems {
  id            bigint                                       [pk, increment, not null]
  owner_id      bigint                                       
  title         varchar(255)                                 [not null]
  year_written  int                                          
  status        enum('draft','published','unpublished')      [not null]
  is_divided    boolean                                      [not null]
  created_at    datetime                                     [not null]
  updated_at    datetime                                     [not null]
  deleted_at    datetime                                     
}

Table timings {
  id          bigint            [pk, increment, not null]
  track_id    bigint            [not null]
  line_id     bigint            [not null]
  end_time    decimal(8,3)      [not null]
  created_at  timestamp         
  updated_at  timestamp         
}

Table tracks {
  id                 bigint                      [pk, increment, not null]
  fragment_id        bigint                      [not null]
  filename           varchar(255)                [not null]
  original_filename  varchar(255)                
  duration           decimal(8,3)                [not null]
  is_ai_generated    boolean                     [not null]
  title              varchar(255)                [not null]
  sort_order         int                         [not null]
  status             enum('draft','active')      [not null]
  created_at         timestamp                   
  updated_at         timestamp                   
}


// Внешние ключи
Ref: fragments.poem_id > poems.id [delete: cascade]
Ref: lines.fragment_id > fragments.id [delete: cascade]
Ref: poem_authors.author_id > authors.id [delete: cascade]
Ref: poem_authors.poem_id > poems.id [delete: cascade]
Ref: timings.line_id > lines.id [delete: cascade]
Ref: timings.track_id > tracks.id [delete: cascade]
Ref: tracks.fragment_id > fragments.id [delete: cascade]
